- Prevent overlap between reviews and navbar on small devices - Some content changes

--- a/Spa/wwwroot/styles/navbarStyle.css
+++ b/Spa/wwwroot/styles/navbarStyle.css
@@ -178,6 +178,7 @@ main p{
     position: fixed;
     top: unset;
     bottom: 0;
+    z-index: 10;
 
     > ul{
       padding: 0;
